--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,7 @@
 body {
   font-family: "Inconsolata", monospace;
   color: #0d1e2d;
+    background-image: linear-gradient(rgb(30, 30, 88), black, black);
 }
 
 a {
