--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,8 +11,10 @@
 body {
   font-family: "Inconsolata", monospace;
   color: #0d1e2d;
-    background-image: linear-gradient(rgb(30, 30, 88), black, black);
+
 }
+html {
+      background-image: linear-gradient(rgb(30, 30, 88), black, black);
 
 a {
   color: #777;
