--- a/assets/css/stylemars.css
+++ b/assets/css/stylemars.css
@@ -3,7 +3,7 @@ html {
   width: 100%;
   height: 100%;
   font-family: "Montserrat", sans-serif;
-  background: url("/img/marsflag.jpg"); no-repeat center center fixed;
+  background: url("/img/laptop2.jpg"); no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -11,26 +11,37 @@ html {
 }
 
 h1 {
-  font-size: 3rem;
-  color: black;
+  font-size: 4rem;
+  color: rgb(255, 255, 255);
+}
+
+.countdown {
+  text-align: center;
+  font-size: 5rem;
+  margin-top: 0px;
+  
 }
 
 #black {
-  font-size: 3rem;
-  color: black;
+
+  color: rgb(255, 255, 255);
 }
 
 hr {
   margin: 20px auto;
-  color: black;
-  border: 3px solid black;
+  color: rgb(255, 255, 255);
+  border: 3px solid rgb(255, 255, 255);
   max-width: 65px;
   opacity: 1;
   border-radius: 5px;
 }
 
 .buffer {
-  height: 6rem;
+  height: 5rem;
+}
+
+.buffersmall {
+  height: 3rem;
 }
 
 #strike {
@@ -48,8 +59,8 @@ hr {
 }
 
 .btn-primary {
-  background-color: black;
-  border-color: black;
+  background-color: rgb(0, 0, 0);
+  border-color: rgb(0, 0, 0);
 }
 
 .btn-primary:hover {
