--- a/assets/css/stylemars.css
+++ b/assets/css/stylemars.css
@@ -3,7 +3,8 @@ html {
   width: 100%;
   height: 100%;
   font-family: "Montserrat", sans-serif;
-  background: url("/img/laptop0.jpg"); no-repeat center center fixed;
+  background: url("/img/laptop0.jpg");
+  background-repeat: no-repeat center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -19,10 +20,7 @@ h1 {
   text-align: center;
   font-size: 6rem;
   margin-top: 0px;
-  
 }
-
-
 
 .buffer {
   height: 5rem;
@@ -55,4 +53,49 @@ h1 {
   background-color: rgb(255, 255, 255);
   border-color: rgb(255, 255, 255);
   color: rgb(0, 0, 0);
+}
+
+/* MEDIA QUERIES*/
+
+@media only screen and (max-width: 700px) {
+  body,
+  html {
+    width: 100%;
+
+    font-family: "Montserrat", sans-serif;
+    background: url("/img/laptop0.jpg");
+    background-repeat: no-repeat center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+  }
+
+  h1 {
+    font-size: 3rem;
+    color: rgb(255, 255, 255);
+    background-color: rgb(0, 0, 0, 0.5);
+  }
+}
+@media {
+  body,
+  html {
+    width: 100%;
+
+    max-width: 2000px;
+    height: 100%;
+    font-family: "Montserrat", sans-serif;
+    background: url("/img/laptop0.jpg");
+    background-repeat: no-repeat fixed;
+    background-position: center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+  }
+  h1 {
+    font-size: 4rem;
+    color: rgb(255, 255, 255);
+    background-color: rgb(0, 0, 0, 0.5);
+  }
 }
