--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,7 +20,7 @@ html {
 .bgimg-1 {
   background-position: center;
   background-size: cover;
-  background-image: url("/img/bg.jpg");
+  background-image: url("/img/laptopcover3.jpg");
   min-height: 100%;
 }
 
@@ -70,6 +70,12 @@ a {
   width: 12rem;
   margin-left: 5%;
   margin-top: 1%;
+}
+.logobottom {
+  width: 10rem;
+  padding-top: 5px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 #aboutmetitle {
