--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,13 +14,11 @@ body,
 html {
   height: 100%;
   line-height: 1.8;
-  background-image: linear-gradient(
-    rgb(230, 230, 230),
-    white,
-    white,
-    white,
-    white
-  );
+  background-color: rgb(230, 230, 230);
+}
+
+.content {
+  background-color: whitesmoke;
 }
 
 /* Full height image header */
@@ -32,7 +30,10 @@ html {
 }
 
 .js {
-  width: 5rem;
+  width: 4rem;
+}
+#social-big {
+  font-size: 2.6rem;
 }
 .js-large {
   width: 7rem;
@@ -76,15 +77,25 @@ a {
   text-decoration: none;
 }
 #logo {
-  width: 5rem;
+  width: 3.5rem;
+  margin: 0.8%;
   margin-left: 5%;
-  margin-top: 1%;
 }
 .logobottom {
-  width: 10rem;
+  width: 5rem;
   padding-top: 5px;
   margin-left: auto;
   margin-right: auto;
+}
+
+.aqua {
+  color: #00fff5;
+}
+
+.aqua-hr {
+  background-color: #00fff5;
+  height: 2px;
+  border-style: none;
 }
 
 .head-title {
@@ -95,7 +106,7 @@ a {
 
 .banner-title {
   font-size: 5rem;
-  color: rgb(233, 233, 233);
+  color: #00fff5;
   text-align: center;
 }
 
@@ -114,10 +125,15 @@ a {
 }
 
 .center-button {
-  margin: 0;
   position: relative;
-  left: 28%;
+  display: inline-block;
+  margin-left: auto;
+  margin-right: auto;
   margin: 1%;
+  top: 50%;
+  left: 20%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
 }
 
 .center-single-button {
@@ -127,9 +143,24 @@ a {
   margin: 1%;
 }
 
+#white-text {
+  color: whitesmoke;
+}
+
+.white {
+  color: white;
+}
+
+.buttons {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  font-size: 0.8rem;
+}
+
 .buttons a :hover {
   cursor: pointer;
-  background-color: rgb(255, 255, 255);
+  background-color: #00fff5;
   transition: background-color 0.5s;
   color: rgb(0, 0, 0);
 }
@@ -181,39 +212,16 @@ section {
   justify-content: center;
 }
 
-.left {
-  width: 50%;
-  height: 800px;
-  background: url(/img/jscalculator.JPG) no-repeat center / cover;
-  border-radius: 60px;
-}
-
-.right {
-  width: 60%;
-  min-height: 400px;
-  background-color: rgba(255, 255, 255, 0.9);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 30px;
-  border-radius: 40px;
-  color: rgb(0, 0, 0);
-  margin-left: -150px;
-  text-align: left, justify;
-  border-color: rgb(0, 0, 0);
-  border-style: solid;
-}
-
 .right a,
 button {
   text-decoration: none;
   text-transform: uppercase;
-  background-color: rgb(0, 0, 0);
-  color: white;
-  padding: 0px 0px;
+  background-color: rgba(0, 0, 0, 0);
+  color: #00fff5;
   display: inline-block;
+  border-color: #00fff5;
   letter-spacing: 2px;
-  border-radius: 15px;
+  border-radius: 5px;
 }
 
 .right a :hover {
@@ -225,22 +233,35 @@ button {
 
 #aboutpic {
   width: 100%;
-  max-width: 600px;
-  margin-top: 100px;
+  max-width: 450px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 60px;
+}
+
+#aboutpic1 {
+  width: 100%;
+  max-width: 450px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .space {
-  margin: 450px;
+  margin: 380px;
 }
 
 div#back {
   position: relative;
-  background-color: #2e446e;
-  padding: 128px 16px;
+  background-color: #2f2f2f;
+  border-bottom: #ffffff;
+  border-left-color: #2f2f2f;
+  border-right-color: #2f2f2f;
+  border-style: solid;
+
   width: 100%;
   padding-top: 15%;
-  border-bottom-right-radius: 100% 1000px;
-  border-bottom-left-radius: 50% 30px;
 }
 
 div#back1 {
@@ -254,97 +275,240 @@ div#back1 {
   width: 100%;
 }
 
-#backx {
+#my-projects-title {
   position: relative;
-
-  background-color: #4e74ba;
-
+  color: rgb(230, 230, 230);
+  max-width: 900px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 900px;
+  background-color: #2f2f2f;
+  box-shadow: 0px 0px #445a6e;
+  text-align: center;
   width: 100%;
+  font-size: 4rem;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
 }
 
 #backx1 {
   position: relative;
-  background-color: rgb(230, 230, 230);
+  max-width: 920px;
+  margin-left: auto;
+  margin-right: auto;
   width: 100%;
+  background-color: rgb(47, 47, 47);
+  border-radius: 20px;
+  color: rgb(230, 230, 230);
+  text-align: center;
+  width: 100%;
+  padding: 2%;
 }
 div#back0 {
   position: relative;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 1%;
 
-  padding-bottom: 5%;
+  background-color: rgba(47, 47, 47);
+  border-radius: 8px;
+  text-align: center;
+  width: 50%;
   padding-top: 5%;
-  background-color: rgb(230, 230, 230);
+  padding-left: 1%;
+}
+div#back00 {
+  position: relative;
+  margin-left: auto;
+  margin-right: auto;
 
+  margin-bottom: 1%;
+  color: rgb(47, 47, 47);
+  border-radius: 8px;
+  text-align: center;
+  width: 50%;
+  padding-top: 2%;
+}
+
+.thumb {
+  width: 90%;
+  padding: 0.6%;
+  border-radius: 30px;
+  margin: 5%;
+}
+.thumb1 {
+  width: 85%;
+  padding: 0.6%;
+  border-radius: 30px;
+  margin: 5%;
+}
+.video-thumb {
+  padding: 0.6%;
+  border-radius: 30px;
+  margin: 5%;
   width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.thumb:hover {
+  background-color: #00fff5;
+  opacity: 0.9;
+  border-style: groove;
+}
+
+.thumb1:hover {
+  background-color: #00fff5;
+  opacity: 0.9;
+  border-style: groove;
+}
+
+#cta {
+  position: relative;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 10%;
+  margin-bottom: 10%;
+  background-color: rgba(47, 47, 47);
+  border-radius: 10px;
+  text-align: center;
+  width: 50%;
+  padding: 1%;
+}
+#ab {
+  position: relative;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 10%;
+  margin-bottom: 10%;
+  background-color: rgba(47, 47, 47);
+  border-radius: 10px;
+  text-align: center;
+  width: 50%;
+  padding: 1%;
+}
+
+#footer {
+  position: relative;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 15%;
+  margin-bottom: 1%;
+  background-color: rgba(47, 47, 47);
+
+  text-align: center;
+  width: 100%;
+  padding: 1%;
+}
+h3 {
+  font-size: 3rem;
+  text-align: center;
+}
+
+.indent {
+  text-indent: 50px;
+  padding: 1%;
+}
+
+#left {
+  color: rgb(230, 230, 230);
+  text-align: left;
+}
+
+#small {
+  font-size: 1.2rem;
+}
+h4 {
+  font-size: 1.5rem;
+  text-align: center;
+}
+
+div#back01 {
+  position: relative;
+  max-width: 900px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 900px;
+  text-align: center;
+  width: 100%;
+  padding-top: 2%;
 }
 div#back2 {
-  position: relative;
-  padding: 5%;
-  background-color: #adc4f0;
-  width: 100%;
-  padding-top: 20%;
-  border-top-left-radius: 10%;
-}
-div#back3 {
   position: relative;
   padding: 1%;
   background-color: rgb(230, 230, 230);
   width: 100%;
-  margin-top: 1%;
-  padding-top: 10px;
-  border-bottom-left-radius: 100% 100px;
-  border-bottom-right-radius: 100% 100px;
 }
 
 div#back3a {
   position: relative;
-  padding: 1%;
-  background-color: rgb(46, 68, 110);
+
   width: 100%;
-  margin-top: 10%;
-  padding-top: 10px;
-  border-bottom-left-radius: 100% 100px;
-  border-bottom-right-radius: 100% 100px;
-  color: rgb(230, 230, 230);
+  margin-top: 12%;
+  border-radius: 50px;
+  color: #2f2f2f;
 }
 
-div#back4 {
-  position: relative;
-  padding: 5%;
-  background-color: #6495ed;
-  width: 100%;
-
-  border-bottom-right-radius: 0%;
-}
-
-h3 {
+h3,
+h2 {
   margin: 0;
+  padding: 0;
 }
 
-.textblack {
+#textblack {
   color: rgb(230, 230, 230);
   text-align: center;
+  font-size: 2rem;
+  margin-top: 1%;
+  animation: text 3s 1;
+  animation-delay: 0.1s;
+  background-color: rgb(230, 230, 230);
+}
+@keyframes text {
+  from {
+    color: rgb(226, 226, 226);
+  }
+  to {
+    color: #464646;
+  }
+}
+
+.neon-title {
+  color: #00fff5;
+  text-align: center;
   font-size: 3rem;
-  animation: arrow 6s infinite;
-  animation-delay: 2s;
+  margin-top: 1%;
+}
+
+#arrow {
+  color: rgb(230, 230, 230);
+  text-align: center;
+  font-size: 5rem;
+  margin-top: 1%;
+  animation: arrow 3s 4;
+  animation-delay: 4s;
+  background-color: rgb(230, 230, 230);
 }
 @keyframes arrow {
   from {
-    color: rgb(230, 230, 230);
+    color: rgb(226, 226, 226);
   }
   to {
-    color: #2f2f2f;
+    color: #464646;
   }
 }
 
 #myNavbar {
-  background-color: rgba(46, 68, 110, 0.5);
+  background-color: rgba(47, 47, 47);
   box-shadow: none;
+  color: whitesmoke;
 }
 .containerx {
   display: inline-block;
 }
 .typed-out {
   overflow: hidden;
+
   border-right: 0.1em solid orange;
   border-radius: 1px;
   white-space: nowrap;
@@ -370,11 +534,11 @@ h3 {
 }
 
 .w3-large {
-  color: rgb(61, 61, 61);
+  color: white;
 }
 
 .navy {
-  background-color: rgba(46, 68, 110);
+  background-color: #2f2f2f;
 }
 
 .row {
@@ -389,8 +553,8 @@ h3 {
 .column {
   -ms-flex: 50%; /* IE10 */
   flex: 50%;
-  max-width: 50%;
-  padding: 0 90px;
+  max-width: 100%;
+  padding: 0 20px;
 }
 
 .column img {
@@ -398,6 +562,7 @@ h3 {
   vertical-align: middle;
   width: 100%;
   border-radius: 2%;
+  padding: 5%;
 }
 
 /* Responsive layout - makes a two column-layout instead of four columns */
@@ -405,7 +570,7 @@ h3 {
   .column {
     -ms-flex: 50%;
     flex: 50%;
-    max-width: 50%;
+    max-width: 100%;
   }
 }
 
@@ -416,4 +581,19 @@ h3 {
     flex: 100%;
     max-width: 100%;
   }
+}
+
+.aboutp {
+  max-width: 1000px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 0;
+  width: 850px;
+  border-radius: 20px;
+  text-align: center;
+}
+
+.aboutp p {
+  font-size: 1.5rem;
+  text-indent: 0.7rem;
 }
