--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,6 +35,26 @@ html {
 #social-big {
   font-size: 2.6rem;
 }
+
+.fa-instagram:hover {
+  color: #b32e87;
+}
+
+.fa-twitter:hover {
+  color: #1c9cea;
+}
+
+.fa-youtube-play:hover {
+  color: #ff0000;
+}
+
+.fa-github:hover {
+  color: #000000;
+}
+
+.fa-envelope:hover {
+  color: #00fff5;
+}
 .js-large {
   width: 7rem;
 }
@@ -78,8 +98,8 @@ a {
 }
 #logo {
   width: 3.5rem;
-  margin: 0.9%;
-  margin-left: 5%;
+  margin: 1%;
+  margin-left: 10%;
 }
 .logobottom {
   width: 5rem;
@@ -134,6 +154,7 @@ a {
   left: 20%;
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
+  background-color: rgba(47, 47, 47);
 }
 
 .center-single-button {
@@ -143,7 +164,7 @@ a {
   margin: 1%;
 }
 
-#white-text {
+.whitesmoke {
   color: whitesmoke;
 }
 
@@ -233,7 +254,7 @@ button {
 
 #aboutpic {
   width: 100%;
-  max-width: 200px;
+  max-width: 140px;
   display: block;
   margin-left: auto;
   margin-right: auto;
@@ -250,7 +271,7 @@ button {
 }
 
 .space {
-  margin: 380px;
+  margin: 100px;
 }
 
 div#back {
@@ -294,29 +315,44 @@ div#back1 {
 
 #backx1 {
   position: relative;
-  max-width: 920px;
+  max-width: 1000px;
   margin-left: auto;
   margin-right: auto;
   width: 100%;
-  background-color: rgb(47, 47, 47);
-  border-radius: 20px;
-  color: rgb(230, 230, 230);
+
+  border-radius: 1px;
+  color: rgba(47, 47, 47);
   text-align: center;
   width: 100%;
-  padding: 2%;
+  padding: 1%;
 }
 div#back0 {
   position: relative;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 1%;
 
   background-color: rgba(47, 47, 47);
   border-radius: 8px;
   text-align: center;
-  width: 50%;
-  padding-top: 5%;
+  width: 70%;
+  margin-top: 5%;
+  padding-top: 2%;
   padding-left: 1%;
+}
+
+.thumb {
+  cursor: pointer;
+}
+
+.contact-form {
+  position: relative;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: rgba(47, 47, 47);
+  border-radius: 8px;
+  text-align: center;
+  width: 50%;
+  padding: 3%;
 }
 div#back00 {
   position: relative;
@@ -332,7 +368,7 @@ div#back00 {
 }
 
 .thumb {
-  width: 90%;
+  width: 95%;
   padding: 0.6%;
   border-radius: 30px;
   margin: 5%;
@@ -373,20 +409,35 @@ div#back00 {
   background-color: rgba(47, 47, 47);
   border-radius: 10px;
   text-align: center;
-  width: 50%;
+  width: 75%;
   padding: 1%;
 }
+
+.cards {
+  min-height: 460px;
+  padding-top: 5%;
+  max-width: 1400px;
+  width: 100%;
+  align-content: center;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 #ab {
   position: relative;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 10%;
+
   margin-bottom: 10%;
-  background-color: rgba(47, 47, 47);
+
   border-radius: 10px;
-  text-align: center;
-  width: 50%;
-  padding: 1%;
+  width: 100%;
+  max-width: 1400px;
+  padding: 5%;
+}
+
+.dark {
+  color: rgba(47, 47, 47) !important;
 }
 
 #footer {
@@ -401,8 +452,6 @@ div#back00 {
   width: 100%;
   padding: 1%;
 }
-
-
 h3 {
   font-size: 3rem;
   text-align: center;
@@ -449,6 +498,10 @@ div#back3a {
   margin-top: 12%;
   border-radius: 50px;
   color: #2f2f2f;
+}
+
+#backx1 img {
+  border-radius: 70px;
 }
 
 h3,
@@ -511,10 +564,10 @@ h2 {
 .typed-out {
   overflow: hidden;
 
-  border-right: 0.1em solid orange;
+  border-right: 0.1em solid #2f2f2f;
   border-radius: 1px;
   white-space: nowrap;
-  animation: typing 1s steps(20, end) forwards, blinking 1.2s infinite;
+  animation: typing 1s steps(20, end) forwards, blinking 1.2s 3;
   font-size: 5rem;
   width: 0;
 }
@@ -554,9 +607,9 @@ h2 {
 /* Create four equal columns that sits next to each other */
 .column {
   -ms-flex: 50%; /* IE10 */
-  flex: 50%;
+  flex: 54%;
   max-width: 100%;
-  padding: 0 20px;
+  padding: 0 0px;
 }
 
 .column img {
@@ -568,7 +621,7 @@ h2 {
 }
 
 /* Responsive layout - makes a two column-layout instead of four columns */
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 1000px) {
   .column {
     -ms-flex: 50%;
     flex: 50%;
@@ -598,6 +651,20 @@ h2 {
 .aboutp p {
   font-size: 1.5rem;
   text-indent: 0.7rem;
+}
+
+.about {
+  position: relative;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 10%;
+  margin-bottom: 10%;
+  background-color: rgba(47, 47, 47);
+  border-radius: 10px;
+  text-align: center;
+  width: 100%;
+  max-width: 2000px;
+  padding: 1%;
 }
 
 .w3-right {
