--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,23 +1,4 @@
-@font-face {
-  font-family: "Roboto";
-  font-style: normal;
-  font-weight: 400;
-  src: url(/assets/fonts/Roboto-Regular.ttf);
-}
-
-@font-face {
-  font-family: "Roboto";
-  font-style: normal;
-  font-weight: 700;
-  src: url(/assets/fonts/Roboto-Bold.ttf);
-}
-
-@font-face {
-  font-family: "Roboto-Light";
-  font-style: normal;
-  font-weight: 300;
-  src: url(/assets/fonts/Roboto-Light.ttf);
-}
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap');
 
 body {
   font-family: "Roboto", sans-serif;
@@ -1036,7 +1017,7 @@ body {
 /*---- Social ---*/
 
 #social-big {
-  font-size: 3.5rem;
+  font-size: 2rem;
   color: #ffffff !important;
 }
 
