--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -207,6 +207,7 @@ body {
   color: #273f59;
   text-align: center;
   font-weight: bold;
+  margin-top: 90px;
 }
 
 .page-section__title--white {
@@ -217,7 +218,7 @@ body {
   display: block;
   margin-right: auto;
   margin-left: auto;
-  margin-bottom: 10px;
+  margin-bottom: -10px;
 }
 
 .page-section__paragraph {
