--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -88,8 +88,8 @@ body {
 }
 
 .header__content {
-  padding-top: 200px;
-  padding-bottom: 140px;
+  padding-top: 180px;
+  padding-bottom: 120px;
 }
 
 .header__content__block {
@@ -201,6 +201,10 @@ body {
   margin-top: 100px;
   margin-bottom: 100px;
 }
+.page-section-about {
+  margin-top: 0px;
+  margin-bottom: 100px;
+}
 
 .page-section__title {
   font-size: 35px;
@@ -211,6 +215,13 @@ body {
 
 .page-section__title--white {
   color: #fff;
+}
+
+.page-section__title-about {
+  font-size: 35px;
+  color: #273f59;
+  text-align: left;
+  font-weight: bold;
 }
 
 .page-section__title-style {
@@ -306,6 +317,12 @@ body {
   padding-right: 40px;
   padding-left: 40px;
 }
+
+#about{
+
+text-align:left;
+}
+
 
 .row--margin-top {
   margin-top: 40px;
