--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -98,16 +98,25 @@ body {
   color: #fff;
 }
 
+
+.skills_list {
+
+list-style-type: disc;
+
+}
+
 .header__content__title {
   font-size: 50px;
   font-weight: bold;
   color: #fff;
   margin-top: 0;
+  text-shadow: 3px 4px rgba(0, 0, 0, 0.34);
+
 }
 
 .header__content__sub-title li {
   display: inline-block;
-  font-size: 15px;
+  font-size: 18px;
   color: #e6e6e6;
 }
 
@@ -232,10 +241,10 @@ body {
 }
 
 .page-section__paragraph {
-  font-size: 15px;
+  font-size: 16px;
   color: #5d5d5d;
-  max-width: 540px;
-  text-align: center;
+  max-width: 800px;
+  text-align: left;
   margin-right: auto;
   margin-left: auto;
   margin-bottom: 60px;
@@ -253,7 +262,7 @@ body {
 }
 
 .about__content {
-  padding-top: 70px;
+  padding-top: 20px;
 }
 
 .about__description {
