--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,9 @@
-
+/*!
+ * Bootstrap v4.3.1 (https://getbootstrap.com/)
+ * Copyright 2011-2019 The Bootstrap Authors
+ * Copyright 2011-2019 Twitter, Inc.
+ * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
+ */
 :root {
   --blue: #0070bb;
   --indigo: #6610f2;
@@ -8537,7 +8542,7 @@ h1, h2, h3, h4, h5,
                 -ms-transform: translateY(-50%);
                 transform: translateY(-50%);
                 right: 0;
-                max-width: 50%;
+                max-width: 100%;
                 padding-left: 45px;
                 padding-right: 3em; } }
         .owl-carousel.home-slider .slider-item .slider-text .subheading {
@@ -9129,7 +9134,7 @@ textarea.form-control {
 
 .logo {
 
-  width: 50%;
+  width: 35%;
 }
 
 .ftco-footer {
