--- a/judostudio/assets/css/style.css
+++ b/judostudio/assets/css/style.css
@@ -1,10 +1,3 @@
-/*
-
-TemplateMo 548 Training Studio
-
-https://templatemo.com/tm-548-training-studio
-
-*/
 
 /* ---------------------------------------------
 Table of contents
@@ -219,7 +212,7 @@ body {
 }
 
 .section-heading {
-  text-align: center;
+  text-align: left;
   margin-top: 140px;
   margin-bottom: 80px;
 }
@@ -260,6 +253,11 @@ body {
   font-size: 120%!important;
   text-align: left;
 }
+
+.main-button {
+  border-radius: 5px;
+}
+
 
 .main-button a {
   display: inline-block;
@@ -1333,7 +1331,7 @@ responsive
 .img-thumb {
   float: center;
   width: 200px;
-  height: 350px;
+  height: 600px;
   object-fit: cover;
 }
 
