--- a/judostudio/assets/css/style.css
+++ b/judostudio/assets/css/style.css
@@ -1,3 +1,10 @@
+/*
+
+TemplateMo 548 Training Studio
+
+https://templatemo.com/tm-548-training-studio
+
+*/
 
 /* ---------------------------------------------
 Table of contents
@@ -213,8 +220,8 @@ body {
 
 .section-heading {
   text-align: left;
-  margin-top: 140px;
-  margin-bottom: 80px;
+  margin-top: 60px;
+  margin-bottom: 40px;
 }
 
 .section-heading h2 {
