--- a/judostudio/assets/css/style.css
+++ b/judostudio/assets/css/style.css
@@ -224,6 +224,12 @@ body {
   margin-bottom: 40px;
 }
 
+.section-heading {
+  text-align: left;
+  margin-top: 60px;
+  margin-bottom: 40px;
+}
+
 .section-heading h2 {
   font-size: 42px;
   font-weight: 800;
