--- a/css/style.css
+++ b/css/style.css
@@ -8756,7 +8756,7 @@ h1, h2, h3, h4, h5,
   .btn.btn-primary {
     background: #0070bb;
     border: 1px solid #0070bb !important;
-    color: #000000 !important; }
+    color: #ffffff !important; }
     .btn.btn-primary:hover {
       border: 1px solid #0070bb !important;
       background: #0070bb !important;
