--- a/css/style.css
+++ b/css/style.css
@@ -189,8 +189,6 @@ label {
   display: inline-block;
   margin-bottom: 0.5rem; }
 
-button {
-  border-radius: 0; }
 
 button:focus {
   outline: 1px dotted;
@@ -2045,7 +2043,6 @@ textarea.form-control {
   padding: 0.375rem 0.75rem;
   font-size: 1rem;
   line-height: 1.5;
-  border-radius: 0.25rem;
   -webkit-transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
   -o-transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -2472,14 +2469,12 @@ fieldset:disabled a.btn {
 .btn-lg, .btn-group-lg > .btn {
   padding: 0.5rem 1rem;
   font-size: 1.25rem;
-  line-height: 1.5;
-  border-radius: 0.3rem; }
+  line-height: 1.5; }
 
 .btn-sm, .btn-group-sm > .btn {
   padding: 0.25rem 0.5rem;
   font-size: 0.875rem;
-  line-height: 1.5;
-  border-radius: 0.2rem; }
+  line-height: 1.5; }
 
 .btn-block {
   display: block;
@@ -8134,7 +8129,7 @@ a.text-dark:hover, a.text-dark:focus {
 
 body {
   font-family: "Poppins", Arial, sans-serif;
-  background: #000000;
+  background: #222;
   font-size: 16px;
   line-height: 1.8;
   font-weight: 400;
@@ -8145,6 +8140,11 @@ body {
     height: 100%;
     width: 100%; }
 
+    hr.new1 {
+        border-top: 1px solid gainsboro;
+        width: 100%;
+      }
+         
 a {
   -webkit-transition: .3s all ease;
   -o-transition: .3s all ease;
@@ -9366,6 +9366,16 @@ min-height: 100%;}
   width: 100%;
   height: 350px; }
 
+  .block-22 {
+    overflow:visible;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+    position: relative;
+    display: block;
+    width: 100%;
+    height: auto; }
+
 .blog-entry {
   position: relative; }
   @media (min-width: 768px) {
@@ -9688,7 +9698,7 @@ min-height: 100%;}
   -ms-transform: none;
   transform: none;
   background-color: #fff;
-  border-radius: 0;
+
   -webkit-box-shadow: none;
   box-shadow: none; }
 
