--- a/css/style.css
+++ b/css/style.css
@@ -8364,9 +8364,15 @@ h1, h2, h3, h4, h5,
       font-size: 24px; }
 
 .navbar-brand {
-  font-weight: 900;
-  font-size: 24px;
-  text-transform: uppercase; }
+  font-weight: 600;
+  font-size: 28px;
+  letter-spacing: -2px;
+ }
+
+  .onset-black {
+    box-shadow: inset 0 -.2em 0 rgb(0, 112, 187);
+
+  }
 
 
 .subheading-blue {
